--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tabler/icons-react": "^3.19.0",
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.17.13",
     "antd": "^5.21.3",
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
@@ -36,6 +37,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.9.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
