--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.9.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
